# social_tournament

./: .gitignore  Cargo.toml  Makefile  README.md
doc/: crates.js  search-index.js  settings.html  source-files.js
doc/implementors/core/clone/: trait.Clone.js
doc/implementors/core/cmp/: trait.PartialEq.js
doc/implementors/core/fmt/: trait.Debug.js
doc/social_tournament/: all.html  index.html  sidebar-items.js
doc/social_tournament/double/: enum.DrawOption.html  fn.draw_doubles.html  index.html  sidebar-items.js
doc/social_tournament/model/: index.html  sidebar-items.js  struct.DoubleMatch.html  struct.RoundDoubles.html  struct.RoundSingles.html  struct.SingleMatch.html
doc/social_tournament/single/: fn.draw_singles.html  index.html  sidebar-items.js
doc/src/social_tournament/: lib.rs.html
src/: lib.rs  main.rs
src/double/: mod.rs
src/model/: mod.rs
src/pdf/: mod.rs
src/pdf/language/: mod.rs
src/pdf/playing_cards/: clubs_10.rs  clubs_2.rs  clubs_3.rs  clubs_4.rs  clubs_5.rs  clubs_6.rs  clubs_7.rs  clubs_8.rs  clubs_9.rs  clubs_ace.rs  clubs_jack.rs  clubs_king.rs  clubs_queen.rs  diamonds_10.rs  diamonds_2.rs  diamonds_3.rs  diamonds_4.rs  diamonds_5.rs  diamonds_6.rs  diamonds_7.rs  diamonds_8.rs  diamonds_9.rs  diamonds_ace.rs  diamonds_jack.rs  diamonds_king.rs  diamonds_queen.rs  hearts_10.rs  hearts_2.rs  hearts_3.rs  hearts_4.rs  hearts_5.rs  hearts_6.rs  hearts_7.rs  hearts_8.rs  hearts_9.rs  hearts_ace.rs  hearts_jack.rs  hearts_king.rs  hearts_queen.rs  joker.rs  (+14 more)
src/pdf/route_card/: mod.rs
src/single/: mod.rs
src/table/: mod.rs
(+10 files in other folders)
